updated 4th and 6th page

--- a/6th Page.html
+++ b/6th Page.html
@@ -1386,13 +1386,11 @@
             --f2w-order: 7;
             border-radius: 0;
             width: 613px;
-            height: 350px;
+            height: 162px;
             position: absolute;
             top: 568px;
             left: 438px;
-            overflow: hidden auto;
-            bottom: 568px;
-
+            overflow: hidden auto
         }
 
         #Rectangle_2 {
@@ -3337,7 +3335,7 @@
             <span id="_2064_768" class="pointer-events-none"><span id="__15" class="text">Organisational Chart</span></span>
             <span id="_2064_769" class="pointer-events-none"><span id="__16" class="text">List of Available Registry Documents to Download</span></span>
             <div id="Frame_6">
-                <svg preserveAspectRatio="none" id="Rectangle_2" class="pointer-events-none" width="613" height="350" viewBox="0 0 613 360" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M613 6C613 2.68629 610.314 0 607 0H5.99999C2.68628 0 0 2.68629 0 6V347C0 350.314 2.68629 353 6 353H607C610.314 353 613 350.314 613 347V6Z" fill="#F9FBFE"></path><path d="M6 0.5H607C610.038 0.5 612.5 2.96243 612.5 6V347C612.5 350.038 610.038 352.5 607 352.5H6C2.96243 352.5 0.5 350.038 0.5 347V6C0.5 2.96243 2.96243 0.5 6 0.5Z" stroke="black" stroke-opacity="0.5"></path></svg>
+                <svg preserveAspectRatio="none" id="Rectangle_2" class="pointer-events-none" width="613" height="162" viewBox="0 0 613 162" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M613 6C613 2.68629 610.314 0 607 0H5.99999C2.68628 0 0 2.68629 0 6V347C0 350.314 2.68629 353 6 353H607C610.314 353 613 350.314 613 347V6Z" fill="#F9FBFE"></path><path d="M6 0.5H607C610.038 0.5 612.5 2.96243 612.5 6V347C612.5 350.038 610.038 352.5 607 352.5H6C2.96243 352.5 0.5 350.038 0.5 347V6C0.5 2.96243 2.96243 0.5 6 0.5Z" stroke="black" stroke-opacity="0.5"></path></svg>
                 <div id="sq_493i">
                     <div id="placeholder">
                         <span id="_2064_882" class="pointer-events-none"><span id="__17" class="text">Certificate of Incorporation<br id="__18"></span></span>
