change of file names

--- a/additional_corporate_details.html
+++ b/additional_corporate_details.html
@@ -5,7 +5,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>3rd page</title>
+    <title>Additional Corporate Details</title>
     <link rel="canonical" href="https://fanchon-ejkbujnysy.figweb.site/3rd-Page/">
     <meta name="description" content="Created with figma.to.website">
     <meta property="og:url" content="https://fanchon-ejkbujnysy.figweb.site/3rd-Page/">
@@ -34,7 +34,7 @@
             return {
                 3: {
                     type: "URL",
-                    url: "/4th-Page/"
+                    url: "/organization_chart/"
                 }
             }
         })(), window.F2W_VARIABLES = {
@@ -9557,7 +9557,7 @@
                         </div>
                     </div>
                 </div>
-                <a href="4th Page.html">
+                <a href="organization_chart.html">
   <button tabindex="0" data-reaction-click="3" id="Button">
     <span id="_173_1958" class="pointer-events-none">
       <span id="__128" class="text">Save and Continue</span>
