--- a/corporation_details.html
+++ b/corporation_details.html
@@ -5,7 +5,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>2nd Page</title>
+    <title>Corportation Details</title>
     <link rel="canonical" href="https://fanchon-ejkbujnysy.figweb.site/2nd-Page/">
     <meta name="description" content="Created with figma.to.website">
     <meta property="og:url" content="https://fanchon-ejkbujnysy.figweb.site/2nd-Page/">
@@ -34,7 +34,7 @@
             return {
                 2: {
                     type: "URL",
-                    url: "/3rd-Page/"
+                    url: "/additional_corporate_details.html/"
                 }
             }
         })(), window.F2W_VARIABLES = {
@@ -2704,7 +2704,7 @@
                 </div>
                 <span id="Label_Registered_Company_Name_6" class="pointer-events-none"><span id="__33" class="text">Country of Registration / Domiciliation</span></span>
                 <span id="Label_Registered_Company_Name_7" class="pointer-events-none"><span id="__34" class="text">Incorporation Date</span></span>
-                <a href="3rd Page.html">
+                <a href="additional_corporate_details.html">
   <button tabindex="0" data-reaction-click="2" id="Button_1">
     <span id="_77_5550" class="pointer-events-none">
       <span id="__35" class="text">PROCEED</span>
