--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             return {
                 1: {
                     type: "URL",
-                    url: "/2nd-Page/"
+                    url: "/corporation_details/"
                 }
             }
         })(), window.F2W_VARIABLES = {
@@ -1772,7 +1772,7 @@
                 <span id="Label_Authorised_Share_Capital_2" class="pointer-events-none"><span id="__11" class="text">Or - Save and continue to enter the details now manually.</span></span>
                 <button id="Button">
           <span id="_175_1996" class="pointer-events-none"><span id="__12" class="text">Save and Continue</span></span>
-        <a href="2nd Page.html">
+        <a href="corporation_details.html">
   <button tabindex="0" data-reaction-click="1" id="Button_0">
     <span id="_163_1788" class="pointer-events-none">
       <span id="__13" class="text">Fetch Data Automatically</span>
