--- a/thank_you.html
+++ b/thank_you.html
@@ -5,7 +5,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>10th-Page</title>
+    <title>Thank You</title>
     <link rel="canonical" href="https://fanchon-ejkbujnysy.figweb.site/10th-Page/">
     <meta name="description" content="Created with figma.to.website">
     <meta property="og:url" content="https://fanchon-ejkbujnysy.figweb.site/10th-Page/">
