--- a/corporation_details.html
+++ b/corporation_details.html
@@ -5,7 +5,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Corportation Details</title>
+    <title>Corporation Details</title>
     <link rel="canonical" href="https://fanchon-ejkbujnysy.figweb.site/2nd-Page/">
     <meta name="description" content="Created with figma.to.website">
     <meta property="og:url" content="https://fanchon-ejkbujnysy.figweb.site/2nd-Page/">
