--- a/edward_ng.html
+++ b/edward_ng.html
@@ -2550,7 +2550,7 @@
             <div id="svg_icon_SVG_6" class="pointer-events-none">
             </div>
             <div id="Background_HorizontalBorder_Shadow">
-                <a href="10th Page.html">
+                <a href="thank_you.html">
   <button tabindex="0" data-reaction-click="9" id="Button">
     <span id="_2064_1384" class="pointer-events-none">
       <span id="__3" class="text">Complete</span>
