edit pdf download bug

--- a/organization_chart.html
+++ b/organization_chart.html
@@ -3338,14 +3338,14 @@
             <span id="_2113_108" class="pointer-events-none"><span id="__15" class="text">Organisational Chart</span></span>
             <span id="_2113_109" class="pointer-events-none"><span id="__16" class="text">List of Available Registry Documents to Download</span></span>
             <div id="Group_36">
-                <svg preserveAspectRatio="none" id="Rectangle_2" class="pointer-events-none" width="613" height="168" viewBox="0 0 613 168" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M613 6C613 2.68629 610.314 0 607 0H5.99999C2.68628 0 0 2.68629 0 6V162C0 165.314 2.68629 168 6 168H607C610.314 168 613 165.314 613 162V6Z" fill="#F9FBFE"></path><path d="M6 0.5H607C610.038 0.5 612.5 2.96243 612.5 6V162C612.5 165.038 610.038 167.5 607 167.5H6C2.96243 167.5 0.5 165.038 0.5 162V6C0.5 2.96243 2.96243 0.5 6 0.5Z" stroke="black" stroke-opacity="0.5"></path></svg>
+                <svg preserveAspectRatio="none" id="Rectangle_2" width="613" height="168" viewBox="0 0 613 168" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M613 6C613 2.68629 610.314 0 607 0H5.99999C2.68628 0 0 2.68629 0 6V162C0 165.314 2.68629 168 6 168H607C610.314 168 613 165.314 613 162V6Z" fill="#F9FBFE"></path><path d="M6 0.5H607C610.038 0.5 612.5 2.96243 612.5 6V162C612.5 165.038 610.038 167.5 607 167.5H6C2.96243 167.5 0.5 165.038 0.5 162V6C0.5 2.96243 2.96243 0.5 6 0.5Z" stroke="black" stroke-opacity="0.5"></path></svg>
                 <div id="Frame_6">
                     <div id="sq_493i">
                         <div id="placeholder">
                             <span id="_2113_114"><span id="__17" class="text">Certificate of Incorporation<br id="__18"></span></span>
                         </div>
                         <div id="image_3" >
-                            <a href="documents/Certificate_of_Incorporation_Sunridge_HK.pdf" target="_blank" rel="noopener noreferrer" class="download-link"></a>
+                            <a href="documents/Certificate_of_Incorporation_Sunridge_HK.pdf" target="_blank" rel="noopener noreferrer" class="download-link">
                             <img src="https://fanchon-ejkbujnysy.figweb.site/cdn-cgi/imagedelivery/s-dfVpmPR-aKHmwFNwAgnQ/fanchon-ejkbujnysy.figweb.site-84859bbadf7a349224a0c511f793be5fc81c8490/h=28" alt="image 3" id="__19" fetchpriority="high" decoding="async">
                         </a>
                         </div>
@@ -3355,9 +3355,9 @@
                             <span id="_2113_118" ><span id="__20" class="text">Articles of Association<br id="__21"></span></span>
                         </div>
                         <div id="image_3_0" >
-                            <a href="documents/Articles_of_association.pdf" target="_blank" rel="noopener noreferrer" class="download-link"></a>
+                            <a href="documents/Articles_of_association.pdf" target="_blank" rel="noopener noreferrer" class="download-link">
                             <img src="https://fanchon-ejkbujnysy.figweb.site/cdn-cgi/imagedelivery/s-dfVpmPR-aKHmwFNwAgnQ/fanchon-ejkbujnysy.figweb.site-84859bbadf7a349224a0c511f793be5fc81c8490/h=28" alt="image 3" id="__22" fetchpriority="high" decoding="async">
-                            </a>
+                        </a> 
                         </div>
                     </div>
                     <div id="sq_493i_1">
@@ -3365,7 +3365,7 @@
                             <span id="_2113_122" ><span id="__23" class="text">HK CR Company Particulars<br id="__24"></span></span>
                         </div>
                         <div id="image_3_1">
-                            <a href="documents/HK_CR_company_particulars.pdf" target="_blank" rel="noopener noreferrer" class="download-link"></a>
+                            <a href="documents/HK_CR_company_particulars.pdf" target="_blank" rel="noopener noreferrer" class="download-link">
                             <img src="https://fanchon-ejkbujnysy.figweb.site/cdn-cgi/imagedelivery/s-dfVpmPR-aKHmwFNwAgnQ/fanchon-ejkbujnysy.figweb.site-84859bbadf7a349224a0c511f793be5fc81c8490/h=28" alt="image 3" id="__25" fetchpriority="high" decoding="async">
                         </a>
                         </div>
@@ -3375,8 +3375,9 @@
                             <span id="_2113_126" ><span id="__26" class="text">Business Register Documents<br id="__27"></span></span>
                         </div>
                         <div id="image_3_2" >
-                            <a href="documents/business_register_documents.pdf" target="_blank" rel="noopener noreferrer" class="download-link"></a>
-                                <img src="https://fanchon-ejkbujnysy.figweb.site/cdn-cgi/imagedelivery/s-dfVpmPR-aKHmwFNwAgnQ/fanchon-ejkbujnysy.figweb.site-84859bbadf7a349224a0c511f793be5fc81c8490/h=28" alt="image 3" id="__28" fetchpriority="high" decoding="async">
+                            <a href="documents/business_register_documents.pdf" target="_blank" rel="noopener noreferrer" class="download-link">
+                            <img src="https://fanchon-ejkbujnysy.figweb.site/cdn-cgi/imagedelivery/s-dfVpmPR-aKHmwFNwAgnQ/fanchon-ejkbujnysy.figweb.site-84859bbadf7a349224a0c511f793be5fc81c8490/h=28" alt="image 3" id="__28" fetchpriority="high" decoding="async">
+                        </a>
                         </div>
                     </div>
                     <div id="sq_493i_3">
@@ -3385,21 +3386,21 @@
                             </a>
                         </div>
                         <div id="image_3_3">
-                            <a href="documents/business_branch_registration_certificate.pdf" target="_blank" rel="noopener noreferrer" class="download-link"></a>
-                                <img src="https://fanchon-ejkbujnysy.figweb.site/cdn-cgi/imagedelivery/s-dfVpmPR-aKHmwFNwAgnQ/fanchon-ejkbujnysy.figweb.site-84859bbadf7a349224a0c511f793be5fc81c8490/h=28" alt="image 3" id="__31" fetchpriority="high" decoding="async">
-                            </a>
+                            <a href="documents/business_branch_registration_certificate.pdf" target="_blank" rel="noopener noreferrer" class="download-link">
+                            <img src="https://fanchon-ejkbujnysy.figweb.site/cdn-cgi/imagedelivery/s-dfVpmPR-aKHmwFNwAgnQ/fanchon-ejkbujnysy.figweb.site-84859bbadf7a349224a0c511f793be5fc81c8490/h=28" alt="image 3" id="__31" fetchpriority="high" decoding="async">
+                        </a>
                         </div>
                     </div>
                     <div id="sq_493i_4">
-                        <div id="placeholder_4" class="pointer-events-none">
+                        <div id="placeholder_4">
                         </div>
-                        <div id="image_3_4" class="pointer-events-none">
+                        <div id="image_3_4">
+                            <a href="documents/Annual_Return.pdf" target="_blank" rel="noopener noreferrer" class="download-link">
                             <img src="https://fanchon-ejkbujnysy.figweb.site/cdn-cgi/imagedelivery/s-dfVpmPR-aKHmwFNwAgnQ/fanchon-ejkbujnysy.figweb.site-84859bbadf7a349224a0c511f793be5fc81c8490/h=28" alt="image 3" id="__32" fetchpriority="high" decoding="async">
+                            </a>
                         </div>
                         <div id="placeholder_5">
-                            <a href="documents/Annual_Return.pdf" target="_blank" rel="noopener noreferrer" class="download-link"></a>
-                            <span id="_2113_136" class="pointer-events-none"><span id="__33" class="text">NAR1 - Annual Return</span></span>
-                            </a>
+                            <span id="_2113_136" ><span id="__33" class="text">NAR1 - Annual Return</span></span>
                         </div>
                     </div>
                     <div id="sq_493i_5">
