kyb flow updated

--- a/create-an-entity-corporate.html
+++ b/create-an-entity-corporate.html
@@ -1122,7 +1122,7 @@
                             <svg preserveAspectRatio="none" id="Vector_1" class="pointer-events-none" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M12.3451 21.1327C17.3969 21.1327 21.4922 17.0374 21.4922 11.9856C21.4922 6.93371 17.3969 2.83838 12.3451 2.83838C7.29321 2.83838 3.19788 6.93371 3.19788 11.9856C3.19788 17.0374 7.29321 21.1327 12.3451 21.1327Z" stroke="#0081C3" stroke-width="4.5"></path></svg>
                         </div>
                     </div>
-                    <a href="index.html" id="Button" class="button-link" tabindex="0" data-reaction-click="4">
+                    <a href="incorporation-details-1.html" id="Button" class="button-link" tabindex="0" data-reaction-click="4">
     <span id="_2234_6" class="pointer-events-none"><span id="__9" class="text">Continue</span></span>
 </a>
                 </div>
