--- a/index.html
+++ b/index.html
@@ -408,14 +408,14 @@
         #existing_entities {
             background-color: #fff;
             border-radius: 0;
-            width: 2194px;
-            min-width: 2194px;
-            max-width: 2194px;
+            width: 100%;
+            /* max-width: 1200px; or whatever your content max should be */
             min-height: 1094px;
             max-height: 1094px;
             margin: 0 auto;
             position: relative;
             overflow: visible auto
+
         }
 
         #Body {
@@ -775,7 +775,7 @@
             --f2w-order: 3;
             border: 1px solid #d2d6dc;
             border-radius: 8px;
-            width: calc(100% - 1959px);
+            width: 252px;
             height: 50px;
             position: absolute;
             top: 199px;
@@ -864,7 +864,7 @@
             --f2w-order: 4;
             border: 1px solid #d2d6dc;
             border-radius: 8px;
-            width: calc(100% - 1959px);
+            width: 264px;
             height: 50px;
             position: absolute;
             top: 199px;
@@ -1141,7 +1141,7 @@
             </div>
         </div>
         
-<a href="create an entity.html" class="button-link" tabindex="0" data-reaction-click="2356" id="Button">
+<a href="create an entity.html" class="button-link" tabindex="0" data-reaction-click="2356" id="Button" style="right: 0px;left: 1700px;">
   <span id="_2223_142" class="pointer-events-none">
     <span id="__8" class="text">Create a New Entity</span>
   </span>
