--- a/orion-tech.html
+++ b/orion-tech.html
@@ -3323,34 +3323,42 @@
                 <div id="Frame_6">
                     <div id="sq_493i">
                         <div id="placeholder">
-                            <span id="_2063_640" class="pointer-events-none"><span id="__15" class="text">Certificate of Incorporation<br id="__16"></span></span>
+                            <span id="_2063_640"><span id="__15" class="text">Certificate of Incorporation<br id="__16"></span></span>
                         </div>
-                        <div id="image_3" class="pointer-events-none">
+                        <div id="image_3">
+                            <a href="documents/Certificate of Incorporation (Orion).pdf" target="_blank" rel="noopener noreferrer" class="download-link">
                             <img src="https://fanchon-ejkbujnysy.figweb.site/cdn-cgi/imagedelivery/s-dfVpmPR-aKHmwFNwAgnQ/fanchon-ejkbujnysy.figweb.site-84859bbadf7a349224a0c511f793be5fc81c8490/h=28" alt="image 3" id="__17" fetchpriority="high" decoding="async">
+                            </a>
                         </div>
                     </div>
                     <div id="sq_493i_0">
                         <div id="placeholder_0">
-                            <span id="_2063_644" class="pointer-events-none"><span id="__18" class="text">Business Profile<br id="__19"></span></span>
+                            <span id="_2063_644"><span id="__18" class="text">Business Profile<br id="__19"></span></span>
                         </div>
-                        <div id="image_3_0" class="pointer-events-none">
+                        <div id="image_3_0">
+                            <a href="documents/Certificate of Incorporation (Orion).pdf" target="_blank" rel="noopener noreferrer" class="download-link">
                             <img src="https://fanchon-ejkbujnysy.figweb.site/cdn-cgi/imagedelivery/s-dfVpmPR-aKHmwFNwAgnQ/fanchon-ejkbujnysy.figweb.site-84859bbadf7a349224a0c511f793be5fc81c8490/h=28" alt="image 3" id="__20" fetchpriority="high" decoding="async">
+                            </a>
                         </div>
                     </div>
                     <div id="sq_493i_1">
                         <div id="placeholder_1">
-                            <span id="_2063_648" class="pointer-events-none"><span id="__21" class="text">Register of Directors<br id="__22"></span></span>
+                            <span id="_2063_648"><span id="__21" class="text">Register of Directors<br id="__22"></span></span>
                         </div>
-                        <div id="image_3_1" class="pointer-events-none">
+                        <div id="image_3_1">
+                            <a href="documents/Register of Directors (Orion).pdf" target="_blank" rel="noopener noreferrer" class="download-link"></a>
                             <img src="https://fanchon-ejkbujnysy.figweb.site/cdn-cgi/imagedelivery/s-dfVpmPR-aKHmwFNwAgnQ/fanchon-ejkbujnysy.figweb.site-84859bbadf7a349224a0c511f793be5fc81c8490/h=28" alt="image 3" id="__23" fetchpriority="high" decoding="async">
+                            </a>
                         </div>
                     </div>
                     <div id="sq_493i_2">
                         <div id="placeholder_2">
-                            <span id="_2063_652" class="pointer-events-none"><span id="__24" class="text">Register of Chief Executive Officers<br id="__25"></span></span>
+                            <span id="_2063_652"><span id="__24" class="text">Register of Chief Executive Officers<br id="__25"></span></span>
                         </div>
-                        <div id="image_3_2" class="pointer-events-none">
+                        <div id="image_3_2">
+                            <a href="documents/Register of CEOs (Orion).pdf" target="_blank" rel="noopener noreferrer" class="download-link"></a>
                             <img src="https://fanchon-ejkbujnysy.figweb.site/cdn-cgi/imagedelivery/s-dfVpmPR-aKHmwFNwAgnQ/fanchon-ejkbujnysy.figweb.site-84859bbadf7a349224a0c511f793be5fc81c8490/h=28" alt="image 3" id="__26" fetchpriority="high" decoding="async">
+                            </a>
                         </div>
                     </div>
                     <div id="sq_493i_3">
