--- a/vega-solutions.html
+++ b/vega-solutions.html
@@ -3437,31 +3437,31 @@
         </div>
         <svg preserveAspectRatio="none" id="Rectangle_1" class="pointer-events-none" width="1192" height="308" viewBox="0 0 1192 308" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M6 0.5H1186C1189.04 0.5 1191.5 2.96243 1191.5 6V302C1191.5 305.038 1189.04 307.5 1186 307.5H6C2.96243 307.5 0.5 305.038 0.5 302V6C0.5 2.96243 2.96243 0.5 6 0.5Z" fill="#F9FBFE" stroke="black"></path></svg>
         <div id="Group_26">
-            <a href="4th Page.html" id="Group_34">
+            <a href="sunridge.html" id="Group_34">
                 <div id="Rectangle_2_0" class="pointer-events-none">
                 </div>
                 <span id="_2064_813" class="pointer-events-none"><span id="__40"><span id="__41" class="text">SUNRIDGE LTD. (Hong Kong)<br id="__42"></span><span id="__43" class="text">1,000,000 Ordinary Shares</span></span>
                 </span>
             </a>
-            <a href="5th Page.html" id="Group_33">
+            <a href="orion-tech.html" id="Group_33">
                 <div id="Rectangle_2_1" class="pointer-events-none">
                 </div>
                 <span id="_2064_816" class="pointer-events-none"><span id="__44"><span id="__45" class="text">ORION TECH HOLDINGS LTD. (Singapore)<br id="__46"></span><span id="__47" class="text">750,000 Ordinary Shares</span></span>
                 </span>
             </a>
-            <a href="kelvin_cheng.html" id="Group_32">
+            <a href="kelvin-cheng.html" id="Group_32">
                 <div id="Rectangle_3" class="pointer-events-none">
                 </div>
                 <span id="_2064_819" class="pointer-events-none"><span id="__48"><span id="__49" class="text">Kelvin Cheng<br id="__50"></span><span id="__51" class="text">UBO: 37.5%</span></span>
                 </span>
             </a>
-            <a href="8th Page.html" id="Group_31">
+            <a href="melvin-cheng.html" id="Group_31">
                 <div id="Rectangle_3_0" class="pointer-events-none">
                 </div>
                 <span id="_2064_822" class="pointer-events-none"><span id="__52"><span id="__53" class="text">Melvin Cheng<br id="__54"></span><span id="__55" class="text">UBO: 37.5%</span></span>
                 </span>
             </a>
-            <a href="9th Page.html" id="Group_30">
+            <a href="edward-ng.html" id="Group_30">
                 <div id="Rectangle_4" class="pointer-events-none">
                 </div>
                 <span id="_2064_825" class="pointer-events-none"><span id="__56"><span id="__57" class="text">Edward Ng<br id="__58"></span><span id="__59" class="text">UBO: 25%</span></span>
