--- a/incorporation-details-1.html
+++ b/incorporation-details-1.html
@@ -5,7 +5,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>index</title>
+    <title>incorporation-details</title>
     <link rel="canonical" href="https://fanchon-ejkbujnysy.figweb.site/index/">
     <meta name="description" content="Created with figma.to.website">
     <meta property="og:url" content="https://fanchon-ejkbujnysy.figweb.site/index/">
