--- a/thank-you.html
+++ b/thank-you.html
@@ -922,7 +922,7 @@
             <div id="Green_tick" class="pointer-events-none">
                 <img src="https://fanchon-ejkbujnysy.figweb.site/cdn-cgi/imagedelivery/s-dfVpmPR-aKHmwFNwAgnQ/fanchon-ejkbujnysy.figweb.site-ccc4b4d05fb4a1d0f89fbfd9e64d5e7c0720659b/public" alt="Green tick" id="__9" fetchpriority="high" decoding="async">
             </div>
-            <button id="Button">
+            <button id="Button" style="right:0px; left:1650px">
         <span id="_2127_1078" class="pointer-events-none"><span id="__10" class="text">PROCEED</span></span>
       </button>
         </div>
