--- a/create-an-entity-individual.html
+++ b/create-an-entity-individual.html
@@ -46838,7 +46838,7 @@
                             </div>
                         </div>
                     </a>
-                    <a href="existing-entities.html" id="List_Item_Link_0">
+                    <a href="index.html" id="List_Item_Link_0">
             <svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="none" id="svg_icon_SVG_34" class="pointer-events-none">
               <g id="svg_icon_SVG_35">
                 <path d="M3.8016 6.078C5.4584 6.0746 6.7989 4.7288 6.7955 3.072 6.7922 1.4151 5.4464 0.0747 3.7895 0.078 2.1327 0.0813 0.7922 1.4271 0.7956 3.084 0.7989 4.7408 2.1447 6.0813 3.8016 6.078Z" id="Vector_150"></path>
